--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Mashood Abdulla, <span class="titlePosition">Expert Technologist, HPE India</span></h4>
+            <h4 class="modal-title">Mashood Abdulla, <span class="titlePosition">Expert Technologist, Hewlett Packard Enterprise (HPE)</span></h4>
           </div>
           <div class="modal-body">
             <div class="row">
@@ -989,7 +989,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Arun Ramakrishnan, <span class="titlePosition">Contract Design Engineer at HPC Storage Division, Hewlett Packard Enterprise (HPE)</span></h4>
+            <h4 class="modal-title">Arun Ramakrishnan, <span class="titlePosition">Technologist at HPC Storage Division, Hewlett Packard Enterprise (HPE)</span></h4>
           </div>
           <div class="modal-body">
             <div class="row">
@@ -1141,7 +1141,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
               <tr>
 				<td>Session 1 - Challenges emerging from High performance application to new generation computer architectures</td>
                 <td>9:00 - 9:30 </td>               
-                <td><b>Arun Ramakrishnan</b><br>Contract Design Engineer at HPC Storage Division, Hewlett Packard Enterprise (HPE)</td>
+                <td><b>Arun Ramakrishnan</b><br>Technologist at HPC Storage Division, Hewlett Packard Enterprise (HPE)</td>
               </tr>
               <tr>
 				<td>Session 2 - High Performance Storage Systems - Trends and Challenges</td>
@@ -1161,7 +1161,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
               <tr>
 				<td>Session 5 - OpenFAM: A Programming Model for Disaggregated Memory</td>
 				<td>11:00 - 11:30</td>
-                <td><b>Mashood Abdulla</b><br>Fabric Attached Memory Expert, HPE</td>
+                <td><b>Mashood Abdulla</b><br>Fabric Attached Memory Expert, Hewlett Packard Enterprise (HPE)</td>
               </tr>
               <tr>
 				<td>Panel Discussion Talk it out "HPC, HPDA: Computational Storage, NDP, Hurdles and Enablers!"</td>   
@@ -1335,7 +1335,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
             <img src="./img/Arun.jpg" alt="Badri">
             <div class="caption">
                     <h3>Arun Ramakrishnan</h3>
-                    <p>Contract Design Engineer at HPC Storage Division, Hewlett Packard Enterprise (HPE)</p>
+                    <p>Technologist at HPC Storage Division, Hewlett Packard Enterprise (HPE)</p>
                     <p></p>
                     <p class="flipkart"></p>
                   </div>
@@ -1434,7 +1434,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
             <img src="./img/Mashood.jpg" alt="Shubhankar">
             <div class="caption">
                     <h3>Mashood Abdulla</h3>
-                    <p>Expert Technologist, HPE India</p>
+                    <p>Expert Technologist, Mashood make it Hewlett Packard Enterprise (HPE)</p>
                     <p></p>
                     <p class="flipkart"></p>
                   </div>
