--- a/index.html
+++ b/index.html
@@ -1242,7 +1242,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
               <tr>
 				<td>Closing Notes</td>   
 				<td>15:00 - 15:15</td>  
-                <td><b>Prasant Mishra</b></td>
+                <td><b>Prasant Misra</b> <br> IEEE Bangalore Section</td>
               </tr>
               
               </tr>
