--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
   </div>
 
-   <!-- Ankit Modal -->
+   <!-- Ankit -->
   <div class="modal fade" id="ankit" role="dialog">
       <div class="modal-dialog">
       
