Linking in previous edition

--- a/index.html
+++ b/index.html
@@ -1089,6 +1089,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
               <li><a href="#organizing" data-target="#organizing">Organizing Committee</a></li>
              <!--<li><a href="#agendaSection">Schedule</a></li>-->
               <li><a href="https://in.explara.com/e/ieee-data--storage-summit-2021" target="_blank">Registration</a></li>
+              <li><a href="https://dss-2020.ieeebangalore.org/index.html" target="_blank">IEEE DSS 2020 Edition</a></li>
             </ul>
         </div>
     </nav>
